--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,8 @@ img {
   color:#f4f4fd;
 }
 .footer {
-padding: 100px 0
+padding: 100px 0;
+background-color: #2e2f42;
 }
 
 
@@ -187,9 +188,9 @@ align-items: center;
 
 
 
-.dark-bk {
+/* .dark-bk {
 background-color: #2e2f42;
-}
+} */
 
 .sectio-third {
   background-color: rgba(244, 244, 253, 1);
@@ -348,7 +349,13 @@ background-color: #2e2f42;
 }
 
 .first-sec {
-  padding: 188px 0
+  padding: 188px 0;
+  background-color: #2e2f42;
+  background-image: url(../images/background-image.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  max-width: 1440px;
 }
 .nav-list {
   display: flex;
