--- a/css/style.css
+++ b/css/style.css
@@ -130,6 +130,7 @@ align-items: center;
   background-color: #4D5AE5;
   font-family: "Roboto", sans-serif;
   color:#ffffff;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -228,12 +229,12 @@ background-color: #2e2f42;
 
 }
 
-.filter:hover{
-  border: 1px solid transparent
-}
+
+.filter:hover,
 .filter:focus {
   color: rgba(255, 255, 255, 1);
-  border: 1px solid transparent
+  background: #404BBF;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .photo-acent{
@@ -263,6 +264,7 @@ background-color: #2e2f42;
 
 .subtitle-about-us {
   margin-bottom: 8px;
+  margin-top: 8px;
 }
 
 .text-about-us {
@@ -271,6 +273,7 @@ background-color: #2e2f42;
 }
 
 .doing-images {
+  box-sizing: border-box;
   gap: 24px;
 }
 
@@ -288,6 +291,10 @@ background-color: #2e2f42;
 .card-set-item {
   flex-basis: calc((100% - 24) / 4);
   border-radius: 0px 0px 4px 4px;
+}
+.work-card {
+  background-color: rgba(255, 255, 255, 1);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .card-list {
@@ -309,9 +316,13 @@ background-color: #2e2f42;
 }
 .hero-job {
   text-align: center;
+  margin-bottom: 8px;
 }
 .work-position {
-  padding: 32px 16px;
+  padding-top: 32px;
+  margin-bottom: 32px;
+  margin-right: 16px;
+  margin-left: 16px;
 }
 
 .subtitle-about-work {
@@ -342,6 +353,12 @@ background-color: #2e2f42;
   width: calc((100% - 48px) / 3);
 }
 
+.card-portfolio:hover,
+.card-portfolio:focus {
+  border: 1px solid #F4F4FD;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
 .portfolio-items {
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
@@ -351,7 +368,7 @@ background-color: #2e2f42;
 .first-sec {
   padding: 188px 0;
   background-color: #2e2f42;
-  background-image: url(../images/background-image.jpg);
+  background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/background-image.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -360,4 +377,101 @@ background-color: #2e2f42;
 .nav-list {
   display: flex;
   gap: 40px;
+}
+
+.social-list {
+  display: flex;
+  list-style: none;
+  gap: 24px;
+  justify-content: center;
+  align-items: center;
+}
+.social-icons{
+fill: rgba(244, 244, 253, 1);
+}
+
+.social-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 44px;
+  background-color: rgba(77, 90, 229, 1);
+  border-radius: 50%;
+}
+.social-link:hover,
+.social-link:focus {
+  background-color: rgba(64, 75, 191, 1);
+}
+.aboutus-card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 264px;
+  height: 112px;
+  background-color: rgba(244, 244, 253, 1);
+  border-radius: 4%;
+}
+
+.partner-list {
+  gap: 24px;
+}
+
+.partner-item {
+  display: flex;
+  justify-content: center;
+    align-items: center;
+  border: 1px solid #8E8F99;
+    border-radius: 4px;
+    width: 168px;
+    height: 88px;
+    gap: 24px;
+}
+
+.partner-logo {
+  fill: rgba(142, 143, 153, 1);
+}
+
+.partner-item:hover .partner-logo,
+.partner-item:focus .partner-logo {
+  fill: rgba(64, 75, 191, 1);
+}
+.footer-section {
+  display: flex;
+  gap: 120px;
+}
+.social-list-footer {
+display: flex;
+justify-self: center;
+align-items: center;
+gap: 16px;
+}
+.social-text {
+  font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.02em;
+    color: #FFFFFF;
+}
+/* .footer-social {
+  padding-top: 100px;
+  padding-right: 692px;
+  padding-bottom: 132px;
+} */
+.social-link-footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+fill: rgba(244, 244, 253, 1);
+background-color: rgba(77, 90, 229, 1);
+width: 40px;
+height: 40px;
+border-radius: 50%;
+}
+
+.social-list-footer:hover .social-link-footer,
+.social-list-footer:focus .social-link-footer {
+  background-color: rgba(49, 208, 170, 1);
 }
