--- a/css/style.css
+++ b/css/style.css
@@ -432,7 +432,7 @@ fill: rgba(244, 244, 253, 1);
 }
 
 .partner-logo {
-  fill: rgba(142, 143, 153, 1);
+fill: currentColor;
 }
 
 .partner-item:hover .partner-logo,
@@ -458,6 +458,7 @@ gap: 16px;
     line-height: 24px;
     letter-spacing: 0.02em;
     color: #FFFFFF;
+    margin-bottom: 16px;
 }
 /* .footer-social {
   padding-top: 100px;
@@ -469,14 +470,14 @@ gap: 16px;
   justify-content: center;
   align-items: center;
 fill: rgba(244, 244, 253, 1);
-background-color: #4d5ae5;
+background-color:#4d5ae5;
 width: 40px;
 height: 40px;
 border-radius: 50%;
 }
 
-.social-list-footer:hover .social-link-footer,
-.social-list-footer:focus .social-link-footer {
+.social-link-footer:hover,
+.social-link-footer:focus{
   background-color: #31d0aa;
 }
 
@@ -490,10 +491,31 @@ border-radius: 50%;
 
 .links-portfolio:hover,
 .links-portfolio:focus {
-  0px 1px 6px rgba(46, 47, 66, 0.08),
+  box-shadow:0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16),
     0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .custumers-title {
   line-height: 1.1
+}
+
+.partner-link {
+  width: 100%;
+  height: 100%;
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #8e8f99;
+}
+
+.partner-link:hover,
+.partner-link:focus {
+  border-color: #404bbf;
+  color: #404bbf;
+}
+
+.link-footer {
+
 }
