--- a/css/style.css
+++ b/css/style.css
@@ -421,14 +421,14 @@ fill: rgba(244, 244, 253, 1);
 }
 
 .partner-item {
-  display: flex;
+  /* display: flex;
   justify-content: center;
     align-items: center;
   border: 1px solid #8E8F99;
-    border-radius: 4px;
+    border-radius: 4px; */
     width: 168px;
     height: 88px;
-    gap: 24px;
+    /* gap: 24px; */
 }
 
 .partner-logo {
@@ -450,16 +450,7 @@ justify-self: center;
 align-items: center;
 gap: 16px;
 }
-.social-text {
-  font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 24px;
-    letter-spacing: 0.02em;
-    color: #FFFFFF;
-    margin-bottom: 16px;
-}
+
 /* .footer-social {
   padding-top: 100px;
   padding-right: 692px;
@@ -515,7 +506,16 @@ border-radius: 50%;
   border-color: #404bbf;
   color: #404bbf;
 }
-
+.social-text {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: 0.02em;
+  color: #FFFFFF;
+  margin-bottom: 16px;
+}
 .link-footer {
 
 }
