--- a/css/style.css
+++ b/css/style.css
@@ -161,10 +161,11 @@ align-items: center;
   line-height: 1.5;
   letter-spacing: 0.04em;
   min-width: 169px;
-  padding: 15px 32px;
+  padding: 16px 32px;
   border-radius: 4px;
   border: none;
-  margin: o auto;
+  margin-left: auto;
+  margin-right: auto;
   cursor: pointer;
 }
 .main-btn:focus,
